public abstract class Deli {

}
